tests/files/lexer_tests/should_fail/074.cmdr
// Lexer should fail with an unterminated string (using single quotation)
a = 'unterminated string;